# wechat-agent

./: .gitignore  CLAUDE.md  Install.command  README.md  install.sh  verify.sh
apps/desktop/: .env.example  README.md  index.html  package-lock.json  package.json
apps/desktop/agent-runtime/: wechat-agent.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
design/: app.pen
docs/: agent-prompts.md  context-memory-architecture.md  desktop-app-plan.md  desktop-mvp-demo.md  domestic-agents.md  privacy-and-consent.md
