[package]
name = "wechat-agent-desktop"
version = "0.1.0"
description = "A local WeChat agent desktop demo"
authors = ["WeChat Agent Kit"]
edition = "2021"

[lib]
name = "wechat_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process"] }
